--- a/02+03.Razor Pages/MyLibrary/MyLibrary/Pages/Books/Borrow.cshtml
+++ b/02+03.Razor Pages/MyLibrary/MyLibrary/Pages/Books/Borrow.cshtml
@@ -8,6 +8,7 @@
 
 
 <form method="post">
+    @ModelState["__MODEL__"]
     <div class="form-group row">
         <label asp-for="BorrowerId" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
